Trending Panel base layout done & other fixes
Fixed page overflowing to the left and trending box overflowing to the end of screen.

--- a/Admin Dashboard/dashboardStyle.css
+++ b/Admin Dashboard/dashboardStyle.css
@@ -6,6 +6,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 4fr;
+    overflow: hidden;
 }
 
 .side-panel {
@@ -130,7 +131,7 @@ hr { /* Black bar */
     column-gap: 20px;
     align-items: center;
     text-align: left;
-    font-size: 0.8vw;
+    font-size: calc(3px + 0.8vw); /* Keeps the font size at a minimum of 0.8vw */
     fill: white;
     color: #FFFFFF;
 }
@@ -348,15 +349,16 @@ hr { /* Black bar */
         "Arows"
         "Arows"
         "Arows";
-    grid-template-columns: 80%;
+    grid-template-columns: 90%;
     grid-template-rows: 20% 23% 23% 23%;
     row-gap: 10px;
+    min-width: 90%;
 }
 
 .announcement-rows {
     background-color: #FFFFFF;
     border-radius: 10px;
-    padding: 15px;
+    padding: 25px;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2); 
 }
 
@@ -380,29 +382,58 @@ hr { /* Black bar */
     grid-area: trending;
     display: grid;
     margin-left: 10px; 
+    overflow: hidden;
 }
 
 .main-trending-panel-layout {
     display: grid;
     grid-template-areas: 
-        "Trendingtitle"
-        "Trows"
-        "Trows"
-        "Trows"
-        "Trows";
+        "Trows1"
+        "Trows2"
+        "Trows3"
+        "Trows4";
         grid-template-columns: 80%;
-        grid-template-rows: 20% 23% 23% 23%;
-        row-gap: 14px;
+        grid-template-rows: 23% 23% 23% 23%;
+        row-gap: 10px;
+
+        background-color: #FFFFFF;
+        border-radius: 10px;
+        box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2); 
+        max-width: 90%;
 }
 
-.trending-rows {
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2); 
+.trending-row-item {
+    display: grid;
+    grid-template-areas: 
+    "t-image t-name"
+    "t-image t-desc";
+    grid-template-columns: 30% 70%; /* Adjusted columns */
+    grid-template-rows: auto auto; /* Allow rows to size automatically */
+    padding: 25px;
+    column-gap: 25px;
+    align-items: center;
 }
 
-.trending-rows:hover {
+
+.main-trending-panel-layout:hover {
     box-shadow: 9px 7px 5px 1px rgba(0, 0, 0, 0.2);
     transition: 0.2s;
+}
+
+.trending-image {
+    width: 70px;
+    height: auto;
+    grid-area: t-image;
+    border-radius: 40px;
+}
+
+.trending-panel-h {
+    font-size: 14px;
+    margin: 0;
+    grid-area: t-name;
+}
+
+.trending-panel-p {
+    font-size: 12px;
+    grid-area: t-desc;
 }
